--- a/pages/login/login.less
+++ b/pages/login/login.less
@@ -243,9 +243,9 @@
 
 .bubble-container{
   overflow: hidden;
-  position: absolute;
-  // top: 60vh;
-  // z-index: -999;
+  position: fixed;
+  left: 0; right: 0;
+  top: 0; bottom: 0;
   width: 100vw;
   height: 100vh;
 }
@@ -254,7 +254,7 @@
   width: 6px;
   height: 6px;
   background-image: radial-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.25));
-  animation: shadow1 9s infinite;
+  animation: bubble 9s infinite;
   transition-property: left, top;
   transition-duration: 6s, 3s;
   transition-timing-function: ease,ease;
@@ -262,18 +262,18 @@
 
 // region 登录页动画
 
-@keyframes shadow1 {
-  0% {width:6px;height:6px;opacity:0.2};
-  10% {width:14px;height:14px;opacity:0.4};
-  20% {width:20px;height:20px;opacity:0.6};
-  30% {width:24px;height:24px;opacity:0.8};
-  40% {width:30px;height:30px;opacity:0.9};
-  50% {width:40px;height:40px;opacity:1};
-  60% {width:30px;height:30px;opacity:0.9};
-  70% {width:24px;height:24px;opacity:0.8};
-  80% {width:20px;height:20px;opacity:0.6};
-  90% {width:14px;height:14px;opacity:0.4};
-  100% {width:6px;height:6px;opacity:0.2};
+@keyframes bubble {
+  0% {width:6px;height:6px;opacity:0.2}
+  10% {width:14px;height:14px;opacity:0.4}
+  20% {width:20px;height:20px;opacity:0.6}
+  30% {width:24px;height:24px;opacity:0.8}
+  40% {width:30px;height:30px;opacity:0.9}
+  50% {width:40px;height:40px;opacity:1}
+  60% {width:30px;height:30px;opacity:0.9}
+  70% {width:24px;height:24px;opacity:0.8}
+  80% {width:20px;height:20px;opacity:0.6}
+  90% {width:14px;height:14px;opacity:0.4}
+  100% {width:6px;height:6px;opacity:0.2}
 }
 
 @keyframes login-move-in {
